--- a/.env.web
+++ b/.env.web
@@ -1,5 +1,5 @@
 POSTGRES_USER=reviroint
 POSTGRES_PASSWORD=SuperHardPassword123
-POSTGRES_HOST=database
+POSTGRES_HOST=database_fastapi
 POSTGRES_PORT=5432
 POSTGRES_DB=reviroint_db
