add company tests

--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
-POSTGRES_USER=testReviroIntUser
+POSTGRES_USER=test_reviro_int_user
 POSTGRES_PASSWORD=superTestHardPassword123
-POSTGRES_HOST=testDbFastapi
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=testReviroIntDb
