--- a/compose.test.yaml
+++ b/compose.test.yaml
@@ -1,10 +1,10 @@
 version: '3'
 
 services:
-  testDbFastapi:
+  test_db_fastapi:
     image: postgres:15.1-alpine
     restart: always
-    container_name: testDbFastapi
+    container_name: test_db_fastapi
     volumes:
       - test_reviro_psql_data:/var/lib/postgresql/data/
     expose:
@@ -12,15 +12,15 @@ services:
     env_file:
       - .env.test
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d testReviroIntDb -U testReviroIntUser"]
+      test: ["CMD-SHELL", "pg_isready"]
       interval: 10s
       timeout: 10s
       retries: 5
 
-  testWebFastapi:
+  test_web_fastapi:
     build: .
-    container_name: testWebFastapi
-    command: sh -c "pytest -v"
+    container_name: test_web_fastapi
+    command: sh -c "pytest -v -rP"
     volumes:
       - .:/app
       - .:/tests
@@ -29,7 +29,7 @@ services:
     env_file:
       - .env.test
     depends_on:
-      testDbFastapi:
+      test_db_fastapi:
         condition: service_healthy
 
 volumes:
