--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ uvicorn = {extras = ["standard"], version = "^0.28.0"}
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.9"
 pre-commit = "^3.6.2"
+httpx = "^0.27.0"
+pytest = "^8.1.1"
 
 
 [build-system]
