--- a/requirements.txt
+++ b/requirements.txt
@@ -16,19 +16,23 @@ httptools==0.6.1
 httpx==0.27.0
 identify==2.5.35
 idna==3.6
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
 nodeenv==1.8.0
 orjson==3.9.15
+packaging==24.0
 platformdirs==4.2.0
+pluggy==1.4.0
 pre-commit==3.6.2
 psycopg2-binary==2.9.9
 pydantic==2.6.4
 pydantic-extra-types==2.6.0
 pydantic-settings==2.2.1
 pydantic_core==2.16.3
+pytest==8.1.1
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
