--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 POSTGRES_USER=test_reviro_int_user
 POSTGRES_PASSWORD=superTestHardPassword123
-POSTGRES_HOST=localhost
+POSTGRES_HOST=test_db_fastapi
 POSTGRES_PORT=5432
 POSTGRES_DB=testReviroIntDb
