--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ psycopg2-binary = "^2.9.9"
 pre-commit = "^3.6.2"
 httpx = "^0.27.0"
 pytest = "^8.1.1"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-multipart = "^0.0.9"
 
 
 [build-system]
