--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
+bcrypt==4.1.2
 certifi==2024.2.2
+cffi==1.16.0
 cfgv==3.4.0
 click==8.1.7
+cryptography==42.0.5
 distlib==0.3.8
 dnspython==2.6.1
+ecdsa==0.18.0
 email_validator==2.1.1
 fastapi==0.110.0
 filelock==3.13.1
@@ -24,18 +28,24 @@ MarkupSafe==2.1.5
 nodeenv==1.8.0
 orjson==3.9.15
 packaging==24.0
+passlib==1.7.4
 platformdirs==4.2.0
 pluggy==1.4.0
 pre-commit==3.6.2
 psycopg2-binary==2.9.9
+pyasn1==0.5.1
+pycparser==2.21
 pydantic==2.6.4
 pydantic-extra-types==2.6.0
 pydantic-settings==2.2.1
 pydantic_core==2.16.3
 pytest==8.1.1
 python-dotenv==1.0.1
+python-jose==3.3.0
 python-multipart==0.0.9
 PyYAML==6.0.1
+rsa==4.9
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.28
 starlette==0.36.3
